tests/ill_typed/func_as_param.mist
def f(a: Int, b: Int, myFunc: Func[Int, Int, Int]): Int = myFunc(a, b)

def f2(a: Int, b: String): Int = a

def run(): Int = f(3, 6, f2)